--- a/style.css
+++ b/style.css
@@ -3,23 +3,27 @@
 	color: #fff;
 }
 
-/* Works in Safari */
 ::selection {
 	background-color: #000099;
 	color: #fff;
 }
 
+a, a:visited {
+	color: indianred;
+	text-decoration: none;
+}
+
 body {
-	background-color: #000022;
+	background-color: #fefefe;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
 	text-align: center;
 	font-family: Courier New, Courier, Helevetica Neue, Helevetica, Arial;
-	color: #fff;
+	color: #fefefe;
 }
 
-.menu{
+.menu {
 	position: absolute;
 	display: block;
 	left: 15px;
@@ -36,26 +40,25 @@ body {
 	left: 0;
 	top: 0;
 	padding: 30px 20px 50px 20px;
-	max-width: 200px;
+	max-width: 300px;
 	text-align: left;
+	background-color: #000022;
+	transition: opacity 0.3s ease-out;
 	opacity: 0;
-	background-color: rgba(0,0,34, 0.5);
-	border-right: 2px solid #000022;
-	border-bottom: 2px solid #000022;
-	transition: opacity 0.3s ease-in-out;
-	transform: translateX(-100%);
+	pointer-events: none;
 }
 
 .controls.visible {
+	pointer-events: all;
 	opacity: 1;
 	transform: translateX(0);
 }
 
-.controls h1{
+.controls h1 {
 	font-weight: 400;
 }
 
-.controls button{
+.controls button {
 	display: block;
 	text-align: center;
 	text-transform: uppercase;
@@ -72,131 +75,100 @@ body {
 	position: relative;
 }
 
-.controls button:focus, .controls button:active{
+.controls button:focus, .controls button:active {
 	outline: none;
 }
 
-.controls button:hover{
+.controls button:hover {
 	top: 1px;
 	left: 1px;
 }
 
-.menu-burger{
+.menu-burger {
 	width: 20px;
 	height: 14px;
 	position: absolute;
 	margin: -7px 0 0 -10px;
 	background-color: transparent;
 	border: none;
-	-webkit-tap-highlight-color: #fff;
+	-webkit-tap-highlight-color: #000099;
 	transition: 0.2s;
 	transition-delay: 0.15s;
 	outline: none;
 	cursor: pointer;
 }
 
-.menu-burger i{
+.menu-burger i {
 	display: block;
-	text-indent: 100%;
 	overflow: hidden;
-	white-space: nowrap;
 	height: 2px;
-	background-color: #fff;
+	background-color: #0000ff;
 	width: 100%;
 	position: absolute;
 	top: 50%;
 	left: 0;
-	transition: 0.3s;
-	-webkit-transition: 0.3s;
-	-moz-transition: 0.3s;
-	-o-transition: 0.3s;
-	transition-delay: 0.2s;
-	-webkit-transition-delay: 0.2s;
-	-moz-transition-delay: 0.2s;
-	-o-transition-delay: 0.2s;
-	transition-delay: 0.2s;
+	transition: border-bottom-color 0.3s ease-out, opacity 0.3s ease-out;
 }
 
-.menu-burger span{
+.menu-burger span {
 	content: '';
 	position: absolute;
 	top: 0;
 	height: 0;
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
-	border-bottom-color: #fff;
+	border-bottom-color: #0000ff;
 	width: 100%;
 	left: 0;
 	right: 0;
-	-webkit-transition: .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-	-moz-transition: .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-	-o-transition: .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-	transition: .5s cubic-bezier(0.680, -0.550, 0.265, 1.550);
+	transition: transform 0.3s ease-out, border-bottom-color 0.3s ease-out;
 	transform-origin: right bottom;
-	-moz-transform-origin: right bottom;
-	-webkit-transform-origin: right bottom;
-	-o-transform-origin: right bottom;
-	-ms-transform-origin: right bottom;
 }
 
-.menu-burger span:last-child{
+.menu-burger span:last-child {
 	top: 100%;
-	transform-origin: right bottom;
-	-moz-transform-origin: right bottom;
-	-webkit-transform-origin: right bottom;
-	-o-transform-origin: right bottom;
-	-ms-transform-origin: right bottom;
 }
 
-.menu-burger--is-active{
+.menu-burger--is-active {
 	transform: translate3d(0, 0, 0);
-	-moz-transform: translate3d(0, 0, 0);
-	-webkit-transform: translate3d(0, 0, 0);
-	-o-transform: translate3d(0, 0, 0);
-	-ms-transform: translate3d(0, 0, 0);
-	transition-delay: 0.2s;
-	-webkit-transition-delay: 0.2s;
-	-moz-transition-delay: 0.2s;
-	-o-transition-delay: 0.2s;
 	transition-delay: 0.2s;
 }
 
-.menu-burger--is-active span{
+.menu-burger--is-active span, .menu-burger--is-active i {
 	border-bottom-color: #fff;
 }
 
-.menu-burger--is-active i{
+.menu-burger--is-active i {
 	opacity: 0;
 	transition-delay: 0;
-	-webkit-transition-delay: 0;
-	-moz-transition-delay: 0;
-	-o-transition-delay: 0;
-	transition-delay: 0;
 }
 
-.menu-burger--is-active span:last-child{
+.menu-burger--is-active span:last-child {
 	transform: rotate3d(0, 0, 1, 45deg) translate3d(-1px, 1px, 0);
-	-moz-transform: rotate3d(0, 0, 1, 45deg) translate3d(-1px, 1px, 0);
-	-webkit-transform: rotate3d(0, 0, 1, 45deg) translate3d(-1px, 1px, 0);
-	-o-transform: rotate3d(0, 0, 1, 45deg) translate3d(-1px, 1px, 0);
-	-ms-transform: rotate3d(0, 0, 1, 45deg) translate3d(-1px, 1px, 0);
 }
 
-.menu-burger--is-active span:first-child{
+.menu-burger--is-active span:first-child {
 	transform: rotate3d(0, 0, 1, -45deg) translate3d(0, 0, 0);
-	-moz-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, 0, 0);
-	-webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, 0, 0);
-	-o-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, 0, 0);
-	-ms-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, 0, 0);
 }
 
-.controls .toggleRectangle .toggleRectangle__remove, .controls .pause .pause__play {
-	display: none;
+.stats-container > div {
+	left: initial !important;
+	top: initial !important;
+	right: 0 !important;
+	bottom: 0 !important;
 }
 
-.controls .toggleRectangle.remove .toggleRectangle__remove, .controls .pause.paused .pause__play {
-	display: block;
+.dg li.disabled {
+	pointer-events: none;
+	position: relative;
 }
-.controls .toggleRectangle.remove .toggleRectangle__add, .controls .pause.paused .pause__pause {
-	display: none;
+
+.dg li.disabled:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
 }
